# superrecord

./: .gitignore  CHANGELOG.md  LICENSE  README.md  stack-frontend.yaml  stack.yaml  superrecord.cabal
.circleci/: config.yml
bench/: Bench.hs
src/: SuperRecord.hs
src/SuperRecord/: Field.hs  Sort.hs  TaggedVariant.hs  TextVariant.hs  Variant.hs
src/SuperRecord/Variant/: Tagged.hs  Text.hs
test/: Spec.hs
