name:                superrecord
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/agrafix/superrecord#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Thiemann
maintainer:          mail@athiemann.net
copyright:           2017 Alexander Thiemann <mail@athiemann.net>
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SuperRecord
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , constraints
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite superrecord-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , superrecord
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/agrafix/superrecord
