name:                superrecord
version:             0.4.0.0
synopsis:            Supercharged anonymous records
description:         Anonymous records with various useful utilities
homepage:            https://github.com/agrafix/superrecord#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Thiemann
maintainer:          mail@athiemann.net
copyright:           2017 Alexander Thiemann <mail@athiemann.net>
category:            Web
build-type:          Simple
extra-source-files:
  README.md
  CHANGELOG.md
cabal-version:       >=1.10

flag GhcjsNativeRecord
     Description: When compiling with GHCJS, use native JavaScript records as underlying representation
     Default: True

library
  hs-source-dirs:      src
  exposed-modules:     SuperRecord
                     , SuperRecord.Variant
  other-modules:       SuperRecord.Field
                     , SuperRecord.Sort
  build-depends:       base >= 4.9 && < 5
                     , constraints
                     , aeson >= 1.0
                     , text >= 1.2
                     , deepseq >= 1.4
                     , ghc-prim >= 0.5
                     , mtl >= 2.1
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

  if impl(ghcjs)
    build-depends: ghcjs-base
    if flag(GhcjsNativeRecord)
        cpp-options: "-DJS_RECORD"

test-suite superrecord-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , superrecord
                     , hspec
                     , aeson
                     , mtl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark superrecord-bench
  type:                exitcode-stdio-1.0
  main-is:             Bench.hs
  hs-source-dirs:      bench
  build-depends:       base
                     , superrecord
                     , criterion
                     , labels
                     , bookkeeper
                     , deepseq
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2

source-repository head
  type:     git
  location: https://github.com/agrafix/superrecord
